fixtures/uitests/tests/ui/non_hashable_record_key.stderr
error[E0277]: the trait bound `f32: Hash` is not satisfied
 --> $OUT_DIR[uniffi_uitests]/records.uniffi.rs
  |
  | / pub extern "C" fn r#uniffi_uitests_fn_func_get_dict(
  | |
  | |     call_status: &mut uniffi::RustCallStatus
  | | )  -> <std::collections::HashMap<f32, u64> as ::uniffi::FfiConverter<crate::UniFfiTag>>::ReturnType {
... |
  | |     )
  | | }
  | |_^ the trait `Hash` is not implemented for `f32`
  |
  = help: the following other types implement trait `Hash`:
            i128
            i16
            i32
            i64
            i8
            isize
            u128
            u16
          and $N others
  = note: required for `HashMap<f32, u64>` to implement `FfiConverter<UniFfiTag>`

error[E0277]: the trait bound `f32: std::cmp::Eq` is not satisfied
 --> $OUT_DIR[uniffi_uitests]/records.uniffi.rs
  |
  | / pub extern "C" fn r#uniffi_uitests_fn_func_get_dict(
  | |
  | |     call_status: &mut uniffi::RustCallStatus
  | | )  -> <std::collections::HashMap<f32, u64> as ::uniffi::FfiConverter<crate::UniFfiTag>>::ReturnType {
... |
  | |     )
  | | }
  | |_^ the trait `std::cmp::Eq` is not implemented for `f32`
  |
  = help: the following other types implement trait `std::cmp::Eq`:
            i128
            i16
            i32
            i64
            i8
            isize
            u128
            u16
          and $N others
  = note: required for `HashMap<f32, u64>` to implement `FfiConverter<UniFfiTag>`

error[E0425]: cannot find function `get_dict` in this scope
 --> $OUT_DIR[uniffi_uitests]/records.uniffi.rs
  |
  |             r#get_dict())
  |             ^^^^^^^^^^ not found in this scope
